--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "main": "index.js",
   "scripts": {
     "install-functions": "cd src/test-functions/basic-function && npm install && cd ../heavy-computation && npm install",
-    "test:performance": "node scripts/test-runner.js",
-    "test:basic": "node scripts/test-basic-functions.js",
-    "test:computation": "node scripts/test-computation-functions.js",
+    "test:performance": "tsx scripts/test-runner.ts",
+    "test:basic": "tsx scripts/test-basic-functions.ts",
+    "test:computation": "tsx scripts/test-computation-functions.ts",
     "logs": "sam logs --stack-name lambda-cost-performance-optimization",
     "clean": "rm -rf .aws-sam/",
-    "setup": "npm run install-functions && npm run build"
+    "setup": "npm run install-functions && npm run build",
+    "build": "tsc",
+    "build:watch": "tsc --watch",
+    "type-check": "tsc --noEmit"
   },
   "keywords": [
     "aws",
@@ -24,11 +27,13 @@
   "author": "Performance Optimization Team",
   "license": "MIT",
   "devDependencies": {
+    "@types/node": "^22.17.0",
     "aws-sdk": "^2.1481.0",
     "csv-writer": "^1.6.0",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "tsx": "^4.20.3",
+    "typescript": "^5.9.2"
   },
-  "dependencies": {},
   "engines": {
     "node": ">=22.0.0"
   },
