--- a/package.json
+++ b/package.json
@@ -13,7 +13,13 @@
     "setup": "npm run install-functions && npm run build",
     "build": "tsc",
     "build:watch": "tsc --watch",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "lint": "eslint scripts/**/*.ts --max-warnings 0",
+    "lint:fix": "eslint scripts/**/*.ts --fix",
+    "format": "prettier --write \"scripts/**/*.ts\"",
+    "format:check": "prettier --check \"scripts/**/*.ts\"",
+    "code:check": "npm run type-check && npm run lint && npm run format:check",
+    "code:fix": "npm run lint:fix && npm run format"
   },
   "keywords": [
     "aws",
@@ -27,10 +33,17 @@
   "author": "Performance Optimization Team",
   "license": "MIT",
   "devDependencies": {
+    "@eslint/js": "^9.32.0",
     "@types/node": "^22.17.0",
+    "@typescript-eslint/eslint-plugin": "^8.39.0",
+    "@typescript-eslint/parser": "^8.39.0",
     "aws-sdk": "^2.1481.0",
     "csv-writer": "^1.6.0",
+    "eslint": "^9.32.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
     "jest": "^29.7.0",
+    "prettier": "^3.6.2",
     "tsx": "^4.20.3",
     "typescript": "^5.9.2"
   },
