--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "format": "prettier --write \"scripts/**/*.ts\"",
     "format:check": "prettier --check \"scripts/**/*.ts\"",
     "code:check": "npm run type-check && npm run lint && npm run format:check",
-    "code:fix": "npm run lint:fix && npm run format"
+    "code:fix": "npm run lint:fix && npm run format",
+    "knip": "knip"
   },
   "keywords": [
     "aws",
@@ -42,7 +43,9 @@
     "eslint": "^9.32.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
+    "globals": "^16.3.0",
     "jest": "^29.7.0",
+    "knip": "^5.62.0",
     "prettier": "^3.6.2",
     "tsx": "^4.20.3",
     "typescript": "^5.9.2"
