--- a/package.json
+++ b/package.json
@@ -20,7 +20,16 @@
     "format:check": "prettier --check \"scripts/**/*.ts\"",
     "code:check": "npm run type-check && npm run lint && npm run format:check",
     "code:fix": "npm run lint:fix && npm run format",
-    "knip": "knip"
+    "knip": "knip",
+    "commitlint": "commitlint --from HEAD~1 --to HEAD --verbose",
+    "prepare": "husky"
+  },
+  "lint-staged": {
+    "scripts/**/*.ts": [
+      "eslint --fix --max-warnings 0",
+      "prettier --write",
+      "tsc --noEmit"
+    ]
   },
   "keywords": [
     "aws",
@@ -34,6 +43,8 @@
   "author": "Performance Optimization Team",
   "license": "MIT",
   "devDependencies": {
+    "@commitlint/cli": "^19.8.1",
+    "@commitlint/config-conventional": "^19.8.1",
     "@eslint/js": "^9.32.0",
     "@types/node": "^22.17.0",
     "@typescript-eslint/eslint-plugin": "^8.39.0",
@@ -42,7 +53,9 @@
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
     "globals": "^16.3.0",
+    "husky": "^9.1.7",
     "knip": "^5.62.0",
+    "lint-staged": "^16.1.4",
     "prettier": "^3.6.2",
     "tsx": "^4.20.3",
     "typescript": "^5.9.2"
